--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,11 @@ dependencies:
   equatable: ^2.0.7
   http: ^1.4.0
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
+dflutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/Logo_Cine.png"  # ← aquí pon la ruta de tu nuevo logo
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,7 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/fondo.jpeg 
-  #   - images/a_dot_ham.jpeg
+    - assets/Logo_Cine.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
