--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,13 @@ dependencies:
   equatable: ^2.0.7
   http: ^1.4.0
 
-dflutter_launcher_icons:
+dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
   android: true
   ios: true
-  image_path: "assets/Logo_Cine.png"  # ← aquí pon la ruta de tu nuevo logo
+  image_path: "assets/Logo_Cine_i.png"  # ← aquí pon la ruta de tu nuevo logo
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -49,7 +52,7 @@ dflutter_launcher_icons:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
