Vista detalle contenido terminada

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/fondo.jpeg 
-    - assets/Logo_Cine.png
+    - assets/Logo_cine.png
+    - assets/fondo1.jpg
+    - assets/Logo_Cine_i.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
